# MessageFoundry

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  mefor.code-workspace  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: backlog-hygiene.yml  benchmark.yml  ci.yml  cla.yml  codeql.yml  dependabot-auto-merge.yml  dependabot-lock-resync.yml  freethread-smoke.yml  manifest-lint.yml  release-sync-check.yml  release.yml  scorecard.yml  security.yml  selfhosted-win2025-sql.yml  vuln-metrics.yml  zizmor.yml
.mefor-hooks/: pre-commit
.semgrep/: messagefoundry.yml
docker/: Dockerfile  README.md  compose.yaml  secrets.env.example
docker/k8s/: ha-postgres.yaml  secret.example.yaml  statefulset.yaml
docker/smoke/: Dockerfile  send_adt.py
docs/: ADOPTER-CI.md  AI-OFF-MATRIX.md  AI.md  ANTIVIRUS-FIREWALL.md  AOAG-DEPLOYMENT.md  ARCHITECTURE.md  BRAND.md  CI-QUALITY.md  CI-SELFHOSTED-RUNNER.md  CLOUD-DEPLOYMENT.md  CLOUD-PHI-HIPAA.md  CLUSTERING.md  CODESETS.md  CONFIGURATION.md  CONNECTIONS.md  CONTAINER-EXPOSURE-EVALUATION.md  CONTRIBUTOR-FIRST-ISSUES.md  CONTRIBUTOR-PROGRAM-PLAN.md  COUNSEL-ENGAGEMENT-BRIEF.md  DEPLOY-SERVER-DB.md  DEPLOYMENT.md  DICOM.md  DUAL_LICENSING_PLAN.md  EARLY-ADOPTER-GUIDE.md  FEATURE-MAP.md  HL7-VALIDATION.md  INSTALL-GUIDE.md  LEDGER-GATE.md  LOAD-TESTING.md  MENTAL-MODEL.md  MessageFoundry-Mental-Model.docx  PHI.md  POSITIONING.md  REMOTE-CONSOLE-CUSTOMER-GUIDE.md  REMOTE-CONSOLE.md  SECURITY-REMEDIATION-LEDGER.md  SECURITY.md  SERVICE.md  SUPPORT-POLICY.md  SYSTEM-REQUIREMENTS.md  (+13 more)
docs/adr/: 0001-staged-pipeline-architecture.md  0002-phase2-transport-security-and-strong-auth.md  0003-non-hl7-transports-database-rest-soap.md  0004-payload-agnostic-ingress.md  0005-transform-accessible-state.md  0006-external-data-lookups.md  0007-gui-manageable-connections-toml.md  0008-cluster-observability-api.md  0009-run-scoped-context-providers.md  0010-handler-callable-db-lookup.md  0011-timer-scheduled-source.md  0012-x12-edi-codec.md  0013-increment-2-reingress-design.md  0013-query-response-orchestration.md  0014-alerting-rules-engine.md  0015-ws-soap-outbound-mtls-wssecurity.md  0016-synchronous-x12-request-response.md  0017-consumer-deployment-model.md  0018-per-message-signatures-accepted-risk.md  0019-pluggable-keyprovider-hsm-kms-vault.md  0020-protocol-diagnostic-capture.md  0021-inbound-ack-nak-capture-response-sent.md  0022-fhir-resource-codec-rest-client.md  0023-inbound-http-listener.md  0024-smart-backend-services-token-provider.md  0025-dicom-codec-store-connectors.md  0026-off-box-egress-update-check.md  0027-per-connection-retention.md  0028-base64-binary-carriage-codec.md  0029-email-smtp-destination.md  0030-anonymization-test-harness-tee.md  0031-startup-connection-fault-isolation.md  0032-console-desktop-launch.md  0033-gui-manageable-code-sets.md  0034-static-analysis-triage-policy-accepted-risk-register.md  0035-ide-extension-workspace-trust-and-scope.md  0036-windows-config-source-trust.md  0037-multi-process-sharding-l3.md  0038-internal-pass-through-connector.md  0039-database-tier-sharding-l5.md  (+69 more)
docs/benchmarks/: HANDOFF-enginebox-step2-step3.md  HANDOFF_P0_inline_fusion_measurement.md  PLAN-ENGINE-ATTRIBUTION.md  PLAN-PHASE4-GROUP-COMMIT.md  THROUGHPUT-EXECUTION-PLAN.md  THROUGHPUT-STATUS-2026-07-10.md  TUNING-BASELINE.md  (+4 more)
environments/: dev.toml  prod.toml
harness/: README.md  __main__.py  _async.py  _console_widgets.py  _login.py  compose.py  file_panel.py  file_transport.py  mllp.py  monitor.py  receive.py  scenarios.py  send.py  window.py
ide/: .gitignore  .vscodeignore  README.md  esbuild.js  language-configuration.toml.json  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
messagefoundry/: __init__.py  __main__.py  actions.py  adr_analyze.py  checks.py  corepoint_import.py  diagnostics.py  hl7schema.py  hl7structures.py  integrity.py  last_resort.py  lens.py  logging_setup.py  redaction.py  scaffold.py  secrets_dpapi.py  service_status.py  timezone.py
messagefoundry_webconsole/: __init__.py  _auth.py  _html.py  _security.py  _service.py  mount.py
packaging/messagefoundry-harness/: README.md  pyproject.toml
packaging/messagefoundry-webconsole/: CHANGELOG.md  NOTICE  README.md  RELEASE.md  pyproject.toml
packaging/messagefoundry-webconsole/tests/: conftest.py  test_golden_surface.py  test_pages_config.py  test_ui_hardening.py  test_webui.py
packaging/messagefoundry-webconsole/tests/golden/: ui_routes.txt  ui_write_actions.txt
samples/: send_mllp.py
scripts/: kerberos_epa_spike.py  trace_icon.py  webconsole_seam_snapshot.py
tee/: __init__.py  __main__.py  compare.py  correlate.py  hl7_fields.py  mefor_api.py  mllp.py  relay.py  report.py  store.py
tests/: _dicom_sample.py  _failover_load_support.py  _fhir_fixtures.py  _soft_webauthn.py  _webauthn_store_contract.py  adr0075_batch_harness.py  conftest.py  test_acceptance_framework.py  test_accepts_seam.py  test_ack_capture_runner.py  test_ack_sent_store.py  test_actions.py  test_active_environment.py  test_ad_group_scope.py  test_admin_new_ip.py  test_adr0071_crossing_count.py  test_adr0071_dispatch_wiring.py  test_adr0071_dispatch_wiring_sqlserver.py  test_adr0071_fused_callables_sqlserver.py  test_adr0071_fusion_wiring.py  test_adr0071_statement_rt_inventory.py  test_adr0075_batch_backend_gate.py  test_adr0075_batch_error_attribution.py  test_adr0075_batch_golden_sql.py  test_adr0075_batch_sqlserver.py  test_adr0075_rt_count_gate.py  test_adr_analyze.py  test_ai_policy.py  test_alert_rules.py  test_alert_sinks.py  test_alert_state.py  test_alerts_edit.py  test_alerts_rules_api.py  test_anon_core.py  test_anon_integration.py  test_anon_parity.py  test_api.py  test_api_alerts.py  test_api_auth.py  test_api_reload.py  (+366 more)
(+743 files in other folders)
