[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single source of truth for the version: hatchling reads __version__ from the package module, so the
# literal lives in exactly one place (no pyproject-vs-__init__ drift). Bump it in messagefoundry/__init__.py.
[tool.hatch.version]
path = "messagefoundry/__init__.py"

[project]
name = "messagefoundry"
dynamic = ["version"]  # single-sourced from messagefoundry/__init__.py (see [tool.hatch.version])
description = "Open-source healthcare integration engine — route, transform, and validate messages across many formats and connection types"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "NOTICE"]  # ship the license + copyright/attribution NOTICE in sdist+wheel (PEP 639)
dependencies = [
    "hl7apy>=1.3",          # version-aware validation + profiles
    "hl7>=0.4.5",           # python-hl7: fast, tolerant parsing for routing
    "pydantic>=2.6",        # channel config models / validation
    "aiosqlite>=0.20",      # async SQLite for the message store/queue
    "fastapi>=0.137.1",     # localhost engine API (floor pulls starlette>=1.3.1: CVE-2026-54282/54283)
    "uvicorn[standard]>=0.29",
    "argon2-cffi>=23.1",    # argon2id password hashing (OWASP-recommended)
    "cryptography>=48.0.1", # AES-256-GCM PHI-at-rest encryption for the store (>=48.0.1: GHSA-537c-gmf6-5ccf)
    "ldap3>=2.9",           # Active Directory / LDAP authentication (pure-Python)
    "pyspnego>=0.10",       # SPNEGO/Kerberos negotiate for Windows SSO
    "tomlkit>=0.12",        # comment/format-preserving TOML writer for connections.toml (ADR 0007)
    "tzdata>=2024.1",       # IANA tz database for stdlib zoneinfo (Windows has no system tzdata)
]

[project.optional-dependencies]
console = [
    "PySide6>=6.6",         # admin console (LGPL — OSS-distributable)
    "keyring>=24.0",        # OS-keyring storage for the console's auth token
]
# EXPERIMENTAL SQL Server store backend. Also needs the Microsoft ODBC Driver 18 for SQL Server
# installed at the OS level (not pip-installable). Lazy-imported, so SQLite-only installs skip it.
sqlserver = ["aioodbc>=0.5"]
# PostgreSQL store backend (production server-DB with single-node parity). Pure-Python driver, no
# OS-level dependency. Lazy-imported, so SQLite-only installs skip it.
postgres = ["asyncpg>=0.29"]
# SFTP (SSH) transport for the REMOTEFILE connector. FTP/FTPS use the stdlib (ftplib), no dep.
# Lazy-imported, so installs that never use SFTP skip paramiko.
sftp = ["paramiko>=3.4"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",  # per-test watchdog: a hung test (py3.11 flake, BACKLOG #17) dumps stacks + fails fast, never wedges the leg
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",          # ASGI test client for the localhost API
]

[project.scripts]
messagefoundry = "messagefoundry.__main__:main"

# The offline common-password screening corpus (messagefoundry/auth/data/, loaded via
# importlib.resources) ships in the wheel automatically: hatchling packages every file under the
# messagefoundry/ package, data included. (A previous force-include of that dir double-added the files
# and broke `build --wheel`.) tests/test_password_*.py load the corpus via importlib.resources, so a
# build-config change that dropped it would fail the suite — that's the guard, not a force-include.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Per-test watchdog (BACKLOG #17): a single hung await/socket — seen as an intermittent py3.11 wedge —
# is killed at 60s with a full thread-stack dump naming the culprit, instead of burning the CI job's
# wall-clock. `thread` method works cross-platform (no SIGALRM) and fires even when the main thread is
# blocked in a C call. Individual tests run well under 60s (the whole suite is ~2–5 min).
addopts = "--timeout=60 --timeout-method=thread"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

# Third-party libraries that ship no type stubs / py.typed marker.
[[tool.mypy.overrides]]
module = ["hl7", "hl7.*", "hl7apy.*", "aiosqlite.*", "aioodbc.*", "pyodbc.*", "asyncpg.*", "ldap3.*", "paramiko.*"]
ignore_missing_imports = true
